--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
 <div id="userTitleName" class="text-center">WACh</div>
 <section class="container">
     <form id="login-form">
-        <input class="form-control" name="emailForm" id="emailForm" type="email"  placeholder="your email">
-        <input class="form-control" name="passwordForm" id="passwordForm" type="password"  placeholder="your password">
+        <input class="form-control col-2" name="emailForm" id="emailForm" type="email" placeholder="your email">
+        <input class="form-control col-2" name="passwordForm" id="passwordForm" type="password"
+               placeholder="your password">
         <button id="login-btn" class="btn btn-outline-danger">Login</button>
     </form>
     <a id="profile" class="btn-outline-warning btn">protected page</a>
@@ -28,7 +29,7 @@
     <h2 class="mt-2">Chat</h2>
     <ul id="messages"></ul>
     <form id="form-chat">
-        <input class="form-control col-3 mt-2" id="m" autocomplete="off" />
+        <input class="form-control col-3 mt-2" id="m" autocomplete="off"/>
         <button class="btn btn-outline-danger mt-2">Send</button>
     </form>
 </section>
