--- a/index.html
+++ b/index.html
@@ -25,7 +25,14 @@
         </div>
         <!--REGISTER-->
         <form id="create-form" class="col-2">
-            <input class="form-control mt-2" type="text" id="create-input"/>
+            <input class="form-control mt-2" type="text" placeholder="Name" id="register-name"/>
+            <input class="form-control mt-2" type="email" placeholder="Email" id="register-email"/>
+            <input class="form-control mt-2" type="text" placeholder="Full Name" id="register-fullname"/>
+            <input class="form-control mt-2" type="text" placeholder="Age" id="register-age"/>
+            <input class="form-control mt-2" type="text" placeholder="Location" id="register-location"/>
+            <input class="form-control mt-2" type="text" placeholder="Gender" id="register-gender"/>
+            <input class="form-control mt-2" type="password" placeholder="Password" id="register-pass"/>
+            <input class="form-control mt-2" type="password" placeholder="Repeat Password one more" id="register-check-pass"/>
             <button class="btn btn-primary mt-2">Register</button>
         </form>
         <!--Protected page-->
@@ -49,6 +56,7 @@
     <thead>
     <tr>
         <th>ID</th>
+        <th>Location</th>
         <th>Name</th>
         <th>Actions</th>
     </tr>
