--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
             <input class="form-control mt-2" type="text" placeholder="Location" id="register-location"/>
             <input class="form-control mt-2" type="text" placeholder="Gender" id="register-gender"/>
             <input class="form-control mt-2" type="password" placeholder="Password" id="register-pass"/>
-            <input class="form-control mt-2" type="password" placeholder="Repeat Password one more" id="register-check-pass"/>
+            <input class="form-control mt-2" type="password" placeholder="Repeat Password one more"
+                   id="register-check-pass"/>
             <button class="btn btn-primary mt-2">Register</button>
         </form>
         <!--Protected page-->
