--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
                    placeholder="your password">
             <button id="login-btn" class="btn btn-outline-danger mt-2">Login</button>
         </form>
-        <!--GET BUTTON-->
+        <!--Get button-->
         <div class="col-2">
             <button class="btn btn-outline-success mt-2" id="get-button">READ/GET</button>
         </div>
-        <!--REGISTER-->
+        <!--Register form-->
         <form id="create-form" class="col-2">
             <input class="form-control mt-2" type="text" placeholder="Name" id="register-name"/>
             <input class="form-control mt-2" type="email" placeholder="Email" id="register-email"/>
@@ -52,11 +52,11 @@
     </div>
 </section>
 <hr>
-
+<!--User table-->
 <table class="table table-warning">
     <thead>
     <tr>
-        <th>ID</th>
+        <th>Id</th>
         <th>Location</th>
         <th>Name</th>
         <th>Actions</th>
