update and delete is. work again

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
             <input class="form-control mt-2" type="text" placeholder="Location" id="register-location"/>
             <input class="form-control mt-2" type="text" placeholder="Gender" id="register-gender"/>
             <input class="form-control mt-2" type="password" placeholder="Password" id="register-pass"/>
-            <input class="form-control mt-2" type="password" placeholder="Repeat Password one more"
+            <input class="form-control mt-2" type="password" placeholder="Repeat Password"
                    id="register-check-pass"/>
             <button class="btn btn-primary mt-2">Register</button>
         </form>
@@ -47,6 +47,7 @@
             <form id="form-chat">
                 <input class="form-control mt-2" id="m" autocomplete="off"/>
                 <button class="btn btn-outline-danger mt-2">Send</button>
+                <button class="btn btn-outline-warning mt-2" >Previos</button>
             </form>
         </div>
     </div>
