nav logout logic

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
                 <button id="login-btn" class="btn btn-success mt-1 ml-2">Login</button>
             </form>
         </div>
+        <div>
+            <button id="logout" class="btn btn-danger mt-1 ml-2">Logout</button>
+        </div>
         <div class="dropdown mt-1 ml-2">
             <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">Register
                 <span class="caret"></span></button>
@@ -47,9 +50,7 @@
             </form>
 
         </div>
-        <div>
-            <button class="btn btn-danger mt-1 ml-2">Logout</button>
-        </div>
+
     </div>
 
 </nav>
