nav logout logic

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="row">
         <!--Get button-->
         <div class="col-2">
-            <button class="btn btn-outline-success mt-2" id="get-button">READ/GET</button>
+            <button class="btn btn-outline-success mt-2" id="get-button">USERS</button>
         </div>
         <!--Profile page-->
         <div class="col-1">
