--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>WACh</title>
     <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
     <script src="js/jquery.js"></script>
+    <script src="node_modules/tether/dist/js/tether.min.js"></script>
     <script src="bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
@@ -73,8 +74,8 @@
             <form id="form-chat">
                 <input class="form-control mt-2" id="m" autocomplete="off"/>
                 <button class="btn btn-outline-danger mt-2">Send</button>
-                <button class="btn btn-outline-warning mt-2">Previos</button>
             </form>
+            <button id="previousMess" class="btn btn-outline-warning mt-2">Previous Message</button>
         </div>
     </div>
 </section>
