--- a/login.html
+++ b/login.html
@@ -15,7 +15,7 @@
         <div class="logo">Admin</div>
         <!-- Main Form -->
         <div class="login-form-1">
-            <form id="login-form" class="text-left">
+            <form class="text-left">
                 <div class="login-form-main-message"></div>
                 <div class="main-login-form">
                     <div class="login-group">
@@ -30,8 +30,7 @@
                                    placeholder="password">
                         </div>
                     </div>
-                    <button type="submit" class="btn btn-success login-button">Login<i class="fa fa-chevron-right"></i>
-                    </button>
+                    <button id="admin-login" class="btn btn-success login-button">Login</button>
                 </div>
             </form>
         </div>
