--- a/login.html
+++ b/login.html
@@ -9,7 +9,7 @@
     <script src="bootstrap/js/bootstrap.min.js"></script>
 </head>
 <body>
-<div class="row">
+<div id="admin-login-form" class="row">
     <div class="col-3"></div>
     <div class="text-center col-6">
         <div class="logo">Admin</div>
@@ -36,6 +36,25 @@
         </div>
     </div>
     <div class="col-3"></div>
+</div>
+<div class="row">
+    <button id="admin-get-users"  class="btn btn-success">GET USERS</button>
+</div>
+<div class="row">
+    <!--User table-->
+    <div class="col-1"></div>
+    <table class="col-8 table table-warning">
+        <thead>
+        <tr>
+            <th>Id</th>
+            <th>Location</th>
+            <th>Name</th>
+            <th>Actions</th>
+        </tr>
+        </thead>
+        <tbody>
+        </tbody>
+    </table>
 </div>
 <script src="/socket.io/socket.io.js"></script>
 <script src="js/main.js"></script>
